Do not overflow "No files matching" message. Fixes #1162

--- a/src/components/Autocomplete.css
+++ b/src/components/Autocomplete.css
@@ -90,6 +90,8 @@
   height: 100%;
   color: var(--theme-graphs-full-red);
   font-size: 24px;
+  padding: 4px;
+  word-break: break-all;
 }
 
 .autocomplete .no-result-msg .sad-face {
